solucion error mobile app

--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,9 @@ header h1 {
     padding: 1rem;
     border: none;
     flex: 1;
-    font-size: 1.6rem;
+    font-size: 2.8rem;
+    text-align: center;
+    width: 100%;
 }
 .formulario input[type="submit"] {
     background-color: #1048a4;
